Fix for Snap Mode on IE10 Metro in Windows 8
See http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
for why this is necessary.

--- a/less/responsive-767px-max.less
+++ b/less/responsive-767px-max.less
@@ -4,6 +4,9 @@
 
 
 @media (max-width: 767px) {
+  @-ms-viewport{
+    width: device-width;
+  }
 
   // Padding to set content in a bit
   body {
